--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "hydrogen-player",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@types/node": "18.11.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.32",
+    "vue": "^3.2.45",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.1",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.32.0",
     "typescript": "^4.9.3",
     "unocss": "^0.50.2",
     "vite": "^4.1.0",
